small fix toggle dark mode button

--- a/portfolio/src/scss/_header.scss
+++ b/portfolio/src/scss/_header.scss
@@ -133,12 +133,12 @@ header .light {
     transform: translateX(0);
   }
   to {
-    transform: translateX(40px);
+    transform: translateX(41px);
   }
 }
 @keyframes buttonLeft {
   from {
-    transform: translateX(40px);
+    transform: translateX(41px);
   }
   to {
     transform: translateX(0px);
